[fix][broker] fix CI failure